@@ -4,6 +4,8 @@ Fri Aug 20, 2004 Linas Vepstas <linas@linas.org>
 	* Apply gnotime-desktop.patch from Toshio Kuratomi <toshio@tiki-lounge.com>
 	* Apply gnotime-help.patch from Toshio Kuratomi <toshio@tiki-lounge.com>
 	  This patch fixes the 'help' buttons in various dialogs
+	* Apply gnotime-idle.patch from Toshio Kuratomi <toshio@tiki-lounge.com>
+	  Fixes idle time so that it works with Linux 2.6 kernel /proc/interrupts
 
 Sun May 23, 2004 Linas Vepstas <linas@linas.org>
 	* Prep for 2.2.1 release: tag gnotime-2-2-1
